color contrast issue

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -162,7 +162,7 @@ nav ul {
 
 /* Navigation */
 nav a {
-    color: #fff;
+    color: #024;
     margin-right: 1rem;
     text-decoration: none;
 }
